# blog_post

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
ml_system_design_generator/: README.md  pyproject.toml
ml_system_design_generator/docs/grid_spec/: grid_operations_matrix.md  hurricane_operations_matrix.md  wildfire_operations_matrix.md
ml_system_design_generator/examples/grid_spec_example/: config.yaml  config_anthropic.yaml
ml_system_design_generator/examples/grid_spec_example/output_2page/: main.aux  main.out  main.tex
ml_system_design_generator/src/ml_system_design_generator/: __init__.py  _hydra_conf.py  cli.py  config.py  logging_config.py  models.py  pipeline.py  prompts.py
ml_system_design_generator/src/ml_system_design_generator/agents/: consistency_checker.py  design_planner.py  design_reviewer.py  design_writer.py  doc_analyzer.py  feasibility_assessor.py  gap_analyzer.py  infra_advisor.py  latex_assembler.py  latex_cosmetic_reviewer.py  opportunity_analyzer.py  page_budget_manager.py  quality_reviewer.py  understanding_reviewer.py
ml_system_design_generator/src/ml_system_design_generator/tools/: compiler.py  doc_reader.py  latex_builder.py  latex_linter.py  page_counter.py  pandoc_converter.py  template_loader.py  vector_store.py
ml_system_design_generator/templates/preamble_templates/: design_doc.tex
ml_system_design_generator/templates/styles/: amazon_2page.yaml  amazon_6page.yaml  anthropic_design.yaml  google_design.yaml
ml_system_design_generator/tests/: test_compiler.py  test_doc_reader.py  test_latex_builder.py  test_latex_linter.py  test_models.py  test_template_loader.py  test_vector_store.py
research_article_generator/: CLAUDE.md  README.md  pyproject.toml
research_article_generator/examples/cmame_example/: config.yaml  references.bib
research_article_generator/src/research_article_generator/: __init__.py  _hydra_conf.py  cli.py  config.py  logging_config.py  models.py  pipeline.py
research_article_generator/templates/preamble_templates/: elsarticle.tex  ieeetran.tex  revtex4.tex
research_article_generator/tests/: conftest.py  test_cli_hydra.py  test_compiler.py  test_config.py  test_diff_checker.py  test_figure_suggester.py  test_latex_builder.py  test_latex_linter.py  test_linter.py  test_models.py  test_pandoc_converter.py  test_pipeline_helpers.py  test_plan_reviewer.py  test_tikz_generator.py
research_article_generator/tests/fixtures/: sample_config.yaml
(+32 files in other folders)
