[project]
name = "blog-post"
version = "0.1.0"
description = "Multi-Agent Blogpost Generator using AG2 (AutoGen) and Azure OpenAI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "ag2[openai]",
    "python-dotenv>=1.0.0",
    "openai>=1.40.0",
    "pydantic>=2.7.0",
]
