[project]
name = "research-article-generator"
version = "0.1.0"
description = "CLI tool that transforms markdown research drafts + figures into publication-ready LaTeX documents"
requires-python = ">=3.10"
dependencies = [
    "ag2[openai]",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
rag = "research_article_generator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
